--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -48,6 +48,7 @@ import Modal from "../components/Modal.astro";
 				  <div class="relative">
 					<input
 					  type="text"
+					  name="usuario"
 					  class="w-full px-4 py-3 pl-12 border border-gray-300 rounded-xl focus:ring-2 focus:ring-[#cf152d]/20 focus:border-[#cf152d] transition-all duration-200 bg-white/80 backdrop-blur-sm"
 					  placeholder="Ingresa tu usuario"
 					/>
@@ -65,6 +66,7 @@ import Modal from "../components/Modal.astro";
 				  <div class="relative">
 					<input
 					  type="password"
+					  name="contrasena"
 					  class="w-full px-4 py-3 pl-12 border border-gray-300 rounded-xl focus:ring-2 focus:ring-[#cf152d]/20 focus:border-[#cf152d] transition-all duration-200 bg-white/80 backdrop-blur-sm"
 					  placeholder="Ingresa tu contraseña"
 					/>
