--- a/frontend/src/pages/admin-panel.astro
+++ b/frontend/src/pages/admin-panel.astro
@@ -1,6 +1,6 @@
 ---
 import "../styles/global.css";
-import AdminPanelComponent from "./AdminPanel.jsx";
+import AdminDashboard from "./AdminDashboard.jsx";
 import SonnerToaster from "../components/SonnerToaster.jsx";
 ---
 
@@ -13,7 +13,7 @@ import SonnerToaster from "../components/SonnerToaster.jsx";
     <title>Panel de Administración - UTEPSA</title>
   </head>
   <body>
-    <AdminPanelComponent client:load />
+    <AdminDashboard client:load />
     <SonnerToaster client:only="react" />
 
     <script>
