--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -9,7 +9,7 @@ import SonnerToaster from "../components/SonnerToaster.jsx";
 <html lang="es">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" href="/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="generator" content={Astro.generator} />
     <title>Certificados UTEPSA</title>
