--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -47,7 +47,7 @@ import SonnerToaster from "../components/SonnerToaster.jsx";
 				<!-- Campo Usuario -->
 				<div class="relative">
 				  <label class="block text-sm font-medium text-gray-700 mb-2">
-					Usuario
+					Usuario (Nro. de Registro)
 				  </label>
 				  <div class="relative">
 					<input
@@ -65,7 +65,7 @@ import SonnerToaster from "../components/SonnerToaster.jsx";
 				<!-- Campo Contraseña -->
 				<div class="relative">
 				  <label class="block text-sm font-medium text-gray-700 mb-2">
-					Contraseña
+					Contraseña (Nro. de Carnet sin extensiones)
 				  </label>
 				  <div class="relative">
 					<input
@@ -83,7 +83,7 @@ import SonnerToaster from "../components/SonnerToaster.jsx";
 				<!-- Enlace Olvidé contraseña -->
 				<div class="text-right">
 				  <a href="#" onclick="mostrarModalContrasena()" class="text-sm text-[#cf152d] hover:text-[#cf152d]/80 transition-colors duration-200 cursor-pointer">
-					¿Olvidaste tu contraseña?
+					¿Cómo puedo ingresar?
 				  </a>
 				</div>
 	
@@ -132,6 +132,8 @@ import SonnerToaster from "../components/SonnerToaster.jsx";
             path: '/animation/student.json'
           });
         }
+        
+        console.log('Cristian Ramirez || CTE 2025');
       });
 
       // Función para esperar a que Sonner esté disponible
